2008-09-14  Karl Runge <runge@karlrunge.com>
	* x11vnc: -sleepin m-n for random sleep. More mktemp and mkstemp
	  protections. SSL_INIT_TIMEOUT=n env. var.  Fix macosx console
	  X call bug.  Synchronize other projects sources.

2008-09-06  Karl Runge <runge@karlrunge.com>
	* x11vnc: kill gui_pid on exit in -connect/-connect_or_exit mode.
	  -grablocal n experiment (not compiled by default).  -macuskbd
	  option for macosx for orig uskdb code. keycode=N remote contol
	  cmd.  Find dpy look at non-NFS cookies in /tmp.  Fix gui tray
	  insertion on recent gnome dt. Fix connect_file bug. Sync SSVNC

2008-06-07  Karl Runge <runge@karlrunge.com>
	* x11vnc: -clip xineramaN option, -DIGNORE_GETSPNAM for HP-UX.
	  Print info on SSH_CONNECTION override.

2008-05-31  Karl Runge <runge@karlrunge.com>
	* x11vnc: Improvements to nonstandard indexed color support, e.g.
	  depths 1, 4, 12, etc. instead of only 8.  Only enable xinerama
	  xwarppointer if there is more than 1 subscreen.

2008-05-07  Karl Runge <runge@karlrunge.com>
	* x11vnc: add UltraVNC repeater proxy support.  fix to setp gui
	  mode. -threads is now strongly discouraged.  Read PORT= in url.
	  User can set nolisten for Xvfb in -create mode.  clean up 
	  wait_for_client() to some degree.

2008-01-31  Karl Runge <runge@karlrunge.com>
	* x11vnc: during speeds estimate, guard against client
	  disconnecting.  ssvnc sync.

2008-01-14  Karl Runge <runge@karlrunge.com>
	* x11vnc: -ping option, fix memory corruption in copy_tiles
	  after xrandr resize.

2007-12-16  Karl Runge <runge@karlrunge.com>
	* x11vnc: setup remote-ctrl file by default on macosx. improve
	  tkx11vnc wrt attaching to existing server in icon/tray mode. 

2007-12-15  Karl Runge <runge@karlrunge.com>
	* x11vnc: fix find_display and usleep() prototype on macosx.
	  -display console and check DISPLAY /tmp/...:0 on macosx.
	  implement -noxinerama.

2007-11-12  Karl Runge <runge@karlrunge.com>
	* x11vnc: add clear_locks (Caps_Lock, etc) action.  Fix