@@ -1,5 +1,5 @@
 
-x11vnc README file                         Date: Sun Sep 14 15:20:38 EDT 2008
+x11vnc README file                         Date: Tue Sep 16 10:02:40 EDT 2008
 
 The following information is taken from these URLs:
 
@@ -11808,7 +11808,7 @@ x11vnc: a VNC server for real X displays
    Here are all of x11vnc command line options:
 % x11vnc -opts      (see below for -help long descriptions)
 
-x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2008-09-14
+x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2008-09-16
 
 x11vnc options:
   -display disp            -auth file               -N                     
@@ -11928,7 +11928,7 @@ libvncserver-tight-extension options:
 
 % x11vnc -help
 
-x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2008-09-14
+x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2008-09-16
 
 (type "x11vnc -opts" to just list the options.)
 
@@ -12475,10 +12475,13 @@ e
                        Can also be a numerical IP prefix, e.g. "192.168.100."
                        to match a simple subnet, for more control build
                        libvncserver with libwrap support (See the FAQ).  If the
-                       list contains a "/" it instead is a interpreted as a
-                       file containing addresses or prefixes that is re-read
-                       each time a new client connects.  Lines can be commented
-                       out with the "#" character in the usual way.
+                       list contains a "/" it instead is a interpreted
+                       as a file containing addresses or prefixes that is
+                       re-read each time a new client connects.  Lines can be
+                       commented out with the "#" character in the usual way.
+
+                       -allow applies in -ssl mode, but not in -stunnel mode.
+
 -localhost             Basically the same as "-allow 127.0.0.1".
 
                        Note: if you want to restrict which network interface
@@ -13601,7 +13604,7 @@ e
 
                        For Windows, stunnel has been ported to it and there
                        are probably other such tools available.  See the FAQ
-                       for more examples.
+                       and SSVNC for more examples.
 
 -stunnel3  [pem]       Use version 3.x stunnel command line syntax instead of
                        version 4.x
@@ -15769,7 +15772,9 @@ n
                        proxy:host:port set reverse connection proxy (empty to
                                        disable).
                        allowonce:host  For the next connection only, allow
-                                       connection from "host".
+                                       connection from "host". In -ssl mode
+                                       two connections are allowed (i.e. Fetch
+                                       Cert) unless X11VNC_NO_SSL_ALLOW_TWICE=1
                        allow:hostlist  set -allow list to (comma separated)
                                        "hostlist". See -allow and -localhost.
                                        Do not use with -allow /path/to/file
@@ -16100,14 +16105,14 @@ n
                        nowfl wirecopyrect wcr nowirecopyrect nowcr scr_area
                        scr_skip scr_inc scr_keys scr_term scr_keyrepeat
                        scr_parms scrollcopyrect scr noscrollcopyrect noscr
-                       fixscreen noxrecord xrecord reset_record pointer_mode
-                       pm input_skip allinput noallinput input grabkbd
-                       nograbkbd grabptr nograbptr grabalways nograbalways
+                       fixscreen noxrecord xrecord reset_record pointer_mode pm
+                       input_skip allinput noallinput input grabkbd nograbkbd
+                       grabptr nograbptr grabalways nograbalways grablocal
                        client_input ssltimeout speeds wmdt debug_pointer dp
                        nodebug_pointer nodp debug_keyboard dk nodebug_keyboard
-                       nodk deferupdate defer wait_ui wait_bog nowait_bog
-                       slow_fb xrefresh wait readtimeout nap nonap sb
-                       screen_blank fbpm nofbpm dpms nodpms clientdpms
+                       nodk keycode deferupdate defer wait_ui wait_bog
+                       nowait_bog slow_fb xrefresh wait readtimeout nap nonap
+                       sb screen_blank fbpm nofbpm dpms nodpms clientdpms
                        noclientdpms forcedpms noforcedpms noserverdpms
                        serverdpms noultraext ultraext fs gaps grow fuzz snapfb
                        nosnapfb rawfb uinput_accel uinput_thresh uinput_reset
@@ -16123,7 +16128,7 @@ n
                        nodbg macnosaver macsaver nomacnosaver macnowait macwait
                        nomacnowait macwheel macnoswap macswap nomacnoswap
                        macnoresize macresize nomacnoresize maciconanim macmenu
-                       macnomenu nomacmenu noremote
+                       macnomenu nomacmenu macuskbd nomacuskbd noremote
 
                        aro=  noop display vncdisplay desktopname guess_desktop
                        http_url auth xauth users rootshift clipshift
@@ -16140,7 +16145,6 @@ n
                        button_mask mouse_x mouse_y bpp depth indexed_color
                        dpy_x dpy_y wdpy_x wdpy_y off_x off_y cdpy_x cdpy_y
                        coff_x coff_y rfbauth passwd viewpasswd
-
 
 -QD variable           Just like -query variable, but returns the default
                        value for that parameter (no running x11vnc server
