@@ -566,10 +566,13 @@ void print_help(int mode) {
 "                       Can also be a numerical IP prefix, e.g. \"192.168.100.\"\n"
 "                       to match a simple subnet, for more control build\n"
 "                       libvncserver with libwrap support (See the FAQ).  If the\n"
-"                       list contains a \"/\" it instead is a interpreted as a\n"
-"                       file containing addresses or prefixes that is re-read\n"
-"                       each time a new client connects.  Lines can be commented\n"
-"                       out with the \"#\" character in the usual way.\n"
+"                       list contains a \"/\" it instead is a interpreted\n"
+"                       as a file containing addresses or prefixes that is\n"
+"                       re-read each time a new client connects.  Lines can be\n"
+"                       commented out with the \"#\" character in the usual way.\n"
+"\n"
+"                       -allow applies in -ssl mode, but not in -stunnel mode.\n"
+"\n"
 "-localhost             Basically the same as \"-allow 127.0.0.1\".\n"
 "\n"
 "                       Note: if you want to restrict which network interface\n"
@@ -1707,7 +1710,7 @@ void print_help(int mode) {
 "\n"
 "                       For Windows, stunnel has been ported to it and there\n"
 "                       are probably other such tools available.  See the FAQ\n"
-"                       for more examples.\n"
+"                       and SSVNC for more examples.\n"
 "\n"
 "-stunnel3  [pem]       Use version 3.x stunnel command line syntax instead of\n"
 "                       version 4.x\n"
@@ -3879,7 +3882,9 @@ void print_help(int mode) {
 "                                       disable).\n"
 /* access */
 "                       allowonce:host  For the next connection only, allow\n"
-"                                       connection from \"host\".\n"
+"                                       connection from \"host\". In -ssl mode\n"
+"                                       two connections are allowed (i.e. Fetch\n"
+"                                       Cert) unless X11VNC_NO_SSL_ALLOW_TWICE=1\n"
 /* access */
 "                       allow:hostlist  set -allow list to (comma separated)\n"
 "                                       \"hostlist\". See -allow and -localhost.\n"
@@ -4212,14 +4217,14 @@ void print_help(int mode) {
 "                       nowfl wirecopyrect wcr nowirecopyrect nowcr scr_area\n"
 "                       scr_skip scr_inc scr_keys scr_term scr_keyrepeat\n"
 "                       scr_parms scrollcopyrect scr noscrollcopyrect noscr\n"
-"                       fixscreen noxrecord xrecord reset_record pointer_mode\n"
-"                       pm input_skip allinput noallinput input grabkbd\n"
-"                       nograbkbd grabptr nograbptr grabalways nograbalways\n"
+"                       fixscreen noxrecord xrecord reset_record pointer_mode pm\n"
+"                       input_skip allinput noallinput input grabkbd nograbkbd\n"
+"                       grabptr nograbptr grabalways nograbalways grablocal\n"
 "                       client_input ssltimeout speeds wmdt debug_pointer dp\n"
 "                       nodebug_pointer nodp debug_keyboard dk nodebug_keyboard\n"
-"                       nodk deferupdate defer wait_ui wait_bog nowait_bog\n"
-"                       slow_fb xrefresh wait readtimeout nap nonap sb\n"
-"                       screen_blank fbpm nofbpm dpms nodpms clientdpms\n"
+"                       nodk keycode deferupdate defer wait_ui wait_bog\n"
+"                       nowait_bog slow_fb xrefresh wait readtimeout nap nonap\n"
+"                       sb screen_blank fbpm nofbpm dpms nodpms clientdpms\n"
 "                       noclientdpms forcedpms noforcedpms noserverdpms\n"
 "                       serverdpms noultraext ultraext fs gaps grow fuzz snapfb\n"
 "                       nosnapfb rawfb uinput_accel uinput_thresh uinput_reset\n"
@@ -4235,7 +4240,7 @@ void print_help(int mode) {
 "                       nodbg macnosaver macsaver nomacnosaver macnowait macwait\n"
 "                       nomacnowait macwheel macnoswap macswap nomacnoswap\n"
 "                       macnoresize macresize nomacnoresize maciconanim macmenu\n"
-"                       macnomenu nomacmenu noremote\n"
+"                       macnomenu nomacmenu macuskbd nomacuskbd noremote\n"
 "\n"
 "                       aro=  noop display vncdisplay desktopname guess_desktop\n"
 "                       http_url auth xauth users rootshift clipshift\n"
@@ -4252,7 +4257,6 @@ void print_help(int mode) {
 "                       button_mask mouse_x mouse_y bpp depth indexed_color\n"
 "                       dpy_x dpy_y wdpy_x wdpy_y off_x off_y cdpy_x cdpy_y\n"
 "                       coff_x coff_y rfbauth passwd viewpasswd\n"
-"\n"
 "\n"
 "-QD variable           Just like -query variable, but returns the default\n"
 "                       value for that parameter (no running x11vnc server\n"
