@@ -15,7 +15,7 @@ int xtrap_base_event_type = 0;
 int xdamage_base_event_type = 0;
 
 /*               date +'lastmod: %Y-%m-%d' */
-char lastmod[] = "0.9.4 lastmod: 2008-09-14";
+char lastmod[] = "0.9.4 lastmod: 2008-09-16";
 
 /* X display info */
 
